[gd_scene load_steps=9 format=3 uid="uid://uuuq2dmpt4dc"]

[ext_resource type="PackedScene" uid="uid://5203tlw2qe7m" path="res://player.tscn" id="1_dcfqs"]
[ext_resource type="Script" path="res://main_scene.gd" id="1_qf8xm"]
[ext_resource type="PackedScene" uid="uid://c3jnlalt31hib" path="res://path.tscn" id="2_jhvvg"]
[ext_resource type="PackedScene" uid="uid://0ylviwxcfcef" path="res://tile.tscn" id="2_ukoob"]
[ext_resource type="PackedScene" uid="uid://db5igbxjtnnfr" path="res://enemy.tscn" id="4_drw60"]
[ext_resource type="PackedScene" uid="uid://bkdghj7xakjws" path="res://barrier.tscn" id="6_a0eao"]
[ext_resource type="PackedScene" uid="uid://buq8anlvndhfv" path="res://character.tscn" id="7_6xy63"]
[ext_resource type="Texture2D" uid="uid://b5wxr5ogwrfp7" path="res://areaout.png" id="8_cdcjv"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_qf8xm")
metadata/_edit_horizontal_guides_ = [264.0]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.65098, 0.658824, 0.572549, 0.698039)
offset_left = 8.0
offset_top = -80.0
offset_right = 2616.0
offset_bottom = 1341.0
scale = Vector2(0.518425, 0.551397)
texture = ExtResource("8_cdcjv")
expand_mode = 2

[node name="Path" parent="." instance=ExtResource("2_jhvvg")]
visible = false
position = Vector2(272, 148)

[node name="Path2" parent="." instance=ExtResource("2_jhvvg")]
visible = false
position = Vector2(272, 243)

[node name="Path3" parent="." instance=ExtResource("2_jhvvg")]
visible = false
position = Vector2(272, 340)

[node name="Path4" parent="." instance=ExtResource("2_jhvvg")]
visible = false
position = Vector2(272, 443)

[node name="Path5" parent="." instance=ExtResource("2_jhvvg")]
visible = false
position = Vector2(272, 529)

[node name="Tile1" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(288, 160)

[node name="Tile2" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(288, 256)

[node name="Tile3" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(288, 352)

[node name="Tile4" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(288, 456)

[node name="Tile5" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(288, 544)

[node name="Tile6" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(384, 160)

[node name="Tile7" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(384, 256)

[node name="Tile8" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(384, 352)

[node name="Tile9" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(384, 456)

[node name="Tile10" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(384, 544)

[node name="Tile11" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(480, 160)

[node name="Tile12" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(480, 256)

[node name="Tile13" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(480, 352)

[node name="Tile14" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(480, 456)

[node name="Tile15" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(480, 544)

[node name="Tile16" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(576, 160)

[node name="Tile17" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(576, 256)

[node name="Tile18" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(576, 352)

[node name="Tile19" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(576, 456)

[node name="Tile20" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(576, 544)

[node name="Tile21" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(672, 160)

[node name="Tile22" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(672, 256)

[node name="Tile23" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(672, 352)

[node name="Tile24" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(672, 456)

[node name="Tile25" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(672, 544)

[node name="Tile26" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(768, 160)

[node name="Tile27" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(768, 256)

[node name="Tile28" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(768, 352)

[node name="Tile29" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(768, 456)

[node name="Tile30" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(768, 544)

[node name="Tile31" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(864, 160)

[node name="Tile32" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(864, 256)

[node name="Tile33" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(864, 352)

[node name="Tile34" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(864, 456)

[node name="Tile35" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(864, 544)

[node name="Tile36" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(960, 160)

[node name="Tile37" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(960, 256)

[node name="Tile38" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(960, 352)

[node name="Tile39" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(960, 456)

[node name="Tile40" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(960, 544)

[node name="Tile41" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1056, 160)

[node name="Tile42" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1056, 256)

[node name="Tile43" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1056, 352)

[node name="Tile44" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1056, 456)

[node name="Tile45" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1056, 544)

[node name="Tile46" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1224, 160)

[node name="Tile47" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1224, 256)

[node name="Tile48" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1224, 352)

[node name="Tile49" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1224, 456)

[node name="Tile50" parent="." instance=ExtResource("2_ukoob")]
position = Vector2(1224, 544)

[node name="Player" parent="." instance=ExtResource("1_dcfqs")]
position = Vector2(107, 170)

[node name="Timer" type="Timer" parent="."]

[node name="Enemy1" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy2" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy3" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy4" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy5" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy6" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy7" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy8" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy9" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy10" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 152)

[node name="Enemy11" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy12" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy13" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy14" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy15" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy16" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy17" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy18" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy19" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy20" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1296, 248)

[node name="Enemy21" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy22" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy23" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy24" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy25" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy26" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy27" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy28" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy29" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy30" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 352)

[node name="Enemy31" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy32" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy33" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy34" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy35" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy36" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy37" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy38" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy39" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy40" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 456)

[node name="Enemy41" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy42" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy43" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy44" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy45" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy46" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy47" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy48" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy49" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Enemy50" parent="." instance=ExtResource("4_drw60")]
position = Vector2(1304, 544)

[node name="Character_attack_timer" type="Timer" parent="."]

[node name="Barrier" parent="." instance=ExtResource("6_a0eao")]
position = Vector2(1152, 64)

[node name="Character" parent="." instance=ExtResource("7_6xy63")]
position = Vector2(424, 616)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Character_attack_timer" to="." method="_on_character_attack_timer_timeout"]
